Fixed TLS directly functionality, switch to ssl stream bevor read from stream.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@ browse our CVS repository</a> or download the current development tree via
    </tr>
    <tr>
      <td>CMU CL</td>
-     <td class="working">working</td>
+     <td class="broken">working</td>
+     <td>ssl not working </td>
    </tr>
    <tr>
      <td>Lispworks</td>
