--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
  <p>CL-SMTP is a simple lisp Networking Library that provides SMTP client protocol, supported LOGIN and PLAIN authentication methods.</p>
 
  <p><b>New Version</b> [20100621.1] Rewrite base64-encode-file in attachments.lisp, fixed wrap at column 
-and add #\Return#\Newline after each column, ignore keyword buffer-size.
-Fixed string-to-base64-string allegro part in cl-smtp.lisp (wrap-at-column nil).
+and add #\Return#\Newline after each column, ignore keyword buffer-size.<br/>
+Fixed string-to-base64-string allegro part in cl-smtp.lisp (wrap-at-column nil).<br/>
 Fixed finish-smtp-mail in cl-smtp, not use fresh-line on stream, send #\Return#\Newline.
 Add test for base64-encode-file.</p>
 
@@ -71,7 +71,7 @@ browse our CVS repository</a> or download the current development tree via
      <td class="working">working</td>
    </tr>
    <tr>
-     <td>OpemMCL</td>
+     <td>OpenMCL</td>
      <td class="working">working</td>
    </tr>
  </table>
